2006-10-27	Benedikt Meurer <benny@xfce.org>

	* terminal/main.c(usage): Fix incorrect english in usage.
	  Bug #2381.
	* po/Terminal.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2006-10-01	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c, terminal/terminal-screen.{c,h},
	  terminal/terminal-shortcut-editor.c, terminal/terminal-window.c,
	  Terminal.ui: Add "Paste Selection" action to the "Edit" menu.
	  Bug #2242.
	* configure.in.in, Makefile.am: Move automake options to configure.
	* doc/C/Terminal.xml.in: Update the user manual.
	* po/Terminal.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2006-10-01	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, terminal/main.c(main): Ignore SIGPIPE. Bug #2349.

2006-09-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c(terminal_widget_init): Accept drops from
	  the Thunar path bar. Bug #2284.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.5.6rc1 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.1.10rc1.
	* THANKS: Add missing translator credits.
	* po/*.po, po-doc/ja.po: Update Project-Id-Version.

2006-08-26	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Parse file:-URIs dropped to a Terminal
	  window properly and format them so they can be used in shell commands
	  directly without having to worry about quoting. Bug #2076.
	* configure.in.in, terminal/terminal-preferences-dialog.c: Use the
	  thumbnail preview support for the background image file selection
	  that was added with exo 0.3.1.9. Bug #2069.

2006-08-12	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c(terminal_preferences_init): Add
	  '~' to the default word chars, as suggested by Giuseppe Torelli
	  <colossus73@gmail.com>.

2006-08-09	Benedikt Meurer <benny@xfce.org>
