@@ -1,3 +1,8 @@
+2006-10-28	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, terminal/Makefile.am: Don't install the symlink
+	  from Terminal to terminal on Win32 platforms. Bug #2433.
+
 2006-10-27	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/main.c(usage): Fix incorrect english in usage.
